tests/cases/errors/sema/break_outside_loop.hc
//@ error: `break` outside of a loop or switch
U0 Main()
{
  break;
}
